# sales-agent

./: .gitignore  CLAUDE.md  README.md
client/: package-lock.json
client/src/: App.tsx  index.css
docs/: fr-1.md  fr-10.md  fr-11.md  fr-12.md  fr-13.md  fr-2.md  fr-3.md  fr-4.md  fr-5.md  fr-6.md  fr-7.md  fr-8.md  fr-9.md
prompt/: server.md
rules/: base.md  bot.md  client.md
salebot/: agent.py  bot.py  main.py  mcp_tools.py  memory.py  package_builder.py  pyproject.toml
salebot/prompts/: system_prompt.md
salebot/tests/: conftest.py  health_check.py  test_agent.py  test_booking_integration.py  test_bot.py  test_integration.py  test_mcp_tools.py  test_memory.py  test_package_builder.py  test_system_prompt.py
server/: db.py  main.py  pyproject.toml  seed.py  test_travel.db  travel.db
server/models/: activity.py  booking.py  flight.py  hotel.py  transport.py
server/routers/: activities.py  bookings.py  flights.py  hotels.py  transport.py
server/tests/: conftest.py  test_activities.py  test_bookings.py  test_flights.py  test_hotels.py  test_transport.py
specs/: README.md
specs/_templates/: feature.md  sprint.md
specs/sprint-1/: sprint.md  tb-01-feat-search-flights.md  tb-02-feat-search-hotels.md  tb-03-feat-search-activities.md  tb-04-feat-search-transport.md  tb-05-feat-agent-tool-calling-loop.md  tb-06-feat-memory-conversation-history.md  tb-07-feat-package-builder.md
specs/sprint-2/: sprint.md  tb-08-feat-system-prompt.md  tb-09-feat-telegram-bot.md  tb-10-feat-e2e-full-package-flow.md  tb-11-chore-transport-test-coverage.md  (+2 more)
(+38 files in other folders)
